# Sunmait_internship

./: .dockerignore  .gitignore  Diabetes_classification.ipynb  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.qodo/: history.sqlite
tests/: test_main.py
